[package]
name = "imorph-runner"
version = "0.1.3"
edition = "2024"
authors = ["Kevin Darlington <kevin@outroot.com>"]
readme = "README.md"
repository = "https://github.com/kdar/imorph-runner"
homepage = "https://github.com/kdar/imorph-runner"
license-file = "LICENSE"
keywords = ["imorph", "updater", "runner"]
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "4.3.0"
toml = "0.9.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
time = { version = "0.3.41", features = ["macros"] }
windows-sys = { version = "0.60.2", features = [
  "Win32",
  "Win32_System",
  "Win32_System_Console",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.winresource]
OriginalFilename = "imorph-runner.exe"
LegalCopyright = "Copyright 2025 Kevin Darlington. MIT licensed."
FileDescription = "iMorph runner"
ProductName = "Morph runner"

[package.metadata.wix]
upgrade-guid = "0E23EE5C-6FF8-40F5-A742-E5699B5067D8"
path-guid = "2BCBF440-ECDE-4B74-B47C-EE9EFA92BC0A"
license = false
eula = false
