[package]
name = "imorph-runner"
version = "0.1.3"
edition = "2024"
authors = ["Kevin Darlington <kevin@outroot.com>"]
readme = "README.md"
repository = "https://github.com/kdar/imorph-runner"
homepage = "https://github.com/kdar/imorph-runner"
license-file = "LICENSE"
keywords = ["imorph", "updater", "runner"]
build = "build.rs"

[build-dependencies]
prost-build = "0.14.1"
winresource = "0.1"

[dependencies]
mega = { version = "0.8.0" }
scraper = "0.24.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "4.4.0"
toml = "0.9.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
time = { version = "0.3.41", features = ["macros"] }
windows = { version = "0.61", features = [
  "Win32_System_Console",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_Security",
] }
windows-registry = "0.5"
conpty = "0.7.0"
regex = "1.11.1"
goblin = "0.10.0"
memmap2 = "0.9.7"
csv = "1.3.1"
tokio-util = "0.7.16"
prost = "0.14.1"
semver = "1.0"
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.winresource]
OriginalFilename = "imorph-runner.exe"
LegalCopyright = "Copyright 2025 Kevin Darlington. MIT licensed."
FileDescription = "iMorph runner"
ProductName = "Morph runner"

[package.metadata.wix]
upgrade-guid = "0E23EE5C-6FF8-40F5-A742-E5699B5067D8"
path-guid = "2BCBF440-ECDE-4B74-B47C-EE9EFA92BC0A"
license = false
eula = false
