[package]
name = "imorph-runner"
version = "0.1.3"
edition = "2024"
authors = ["Kevin Darlington <kevin@outroot.com>"]
readme = "README.md"
repository = "https://github.com/kdar/imorph-runner"
homepage = "https://github.com/kdar/imorph-runner"
license-file = "LICENSE"
keywords = ["imorph", "updater", "runner"]
build = "build.rs"

[build-dependencies]
prost-build = "0.14.3"
winresource = "0.1.31"

[dependencies]
megalib = "0.11"
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.5.0"
toml = "1.1.2"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-appender = "0.2"
dirs = "6"
time = { version = "0.3.47", features = ["macros"] }
windows = { version = "0.62", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Pipes", "Win32_Security"] }
windows-registry = "0.6"
conpty = "0.7.0"
regex = "1.12.3"
goblin = "0.10.5"
memmap2 = "0.9.10"
csv = "1.4.0"
prost = "0.14.3"
semver = "1.0.28"
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.winresource]
OriginalFilename = "imorph-runner.exe"
LegalCopyright = "Copyright 2025 Kevin Darlington. MIT licensed."
FileDescription = "iMorph runner"
ProductName = "Morph runner"

[package.metadata.wix]
upgrade-guid = "0E23EE5C-6FF8-40F5-A742-E5699B5067D8"
path-guid = "2BCBF440-ECDE-4B74-B47C-EE9EFA92BC0A"
license = false
eula = false
